metadata/force-app/main/default/objects/ccrz__E_OrderShipment__c/fields/ccrz__Carrier__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Carrier__c</fullName>
    <description>Should be defined specific to the implementation. Contains list of keys to the supported carriers.</description>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fedex</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>