metadata/force-app/main/default/objects/ccrz__E_OrderShipment__c/fields/ccrz__DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DeliveryDate__c</fullName>
    <description>The expected date of delivery.</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>